# zorro-core

./: .gitignore  .gitmodules  :w  README.md  gen.go  go.mod  go.sum  pyproject.toml
cmd/wasm/: main.go
internal/: gen.go
internal/client/: client.go  client.proto  client_test.go
internal/config/: config.go  config.pb.go  config.proto
internal/context/: context.go  context.pb.go  context.proto  context_test.go  environment.go  plugin.go  plugin.pb.go  plugin.proto  plugin_test.go  resolver.go  resolver_test.go
internal/fs/: fs.go  fs_browser.go  fs_desktop.go  fs_global.go  fs_test.go
internal/network/: grpc.go  grpc_test.go
internal/plugin/: fs.go  fs_browser.go  plugin.go  plugin_test.go  resolver.go  resolver_test.go  version.go  version_test.go
internal/processor/: processor.go  processor_test.go  query.go  query_test.go  queue.go
internal/reflection/: builder.go  client.go  convert.go  decode.go  encode.go  registry.go
internal/scheduling/: client.go  client.pb.go  client.proto  client_test.go  pool.go  pool_test.go  query.go  query_test.go  reflection.go  registration.go  registration_test.go  scheduler.go  scheduler.proto  scheduler_test.go  subprocess.go  subprocess_test.go
internal/tools/: action.go  action.pb.go  action.proto  action_test.go  command.go  command.pb.go  command.proto  socket.go  socket_test.go  tool.go  tool.pb.go  tool.proto
internal/utils/: log.go  writers.go
pkg/config/: config.go
pkg/manager/: invoke.go  retrieve.go
schemas/: action.json  command.json  plugin.json
scripts/: generate_json_schemas.py  generate_protobufs.py
testdata/actions/: bar.json  foo.json
testdata/mocked_protos/: socket_value.proto
tests/: test_context.py  test_db.py  test_network.py  test_plugin.py  test_resolve.py  test_scheduler.py  test_tools.py
zorro_core/app/: cli.py
zorro_core/context/: base.py  context.py  (+4 more)
(+138 files in other folders)
