[tool.poetry]
name = "zorro-core"
version = "0.1.0"
description = ""
authors = ["Lambin Simon <slambin@gmail.com>"]
readme = "README.md"
packages = [{include = "zorro_core"}]

[tool.poetry.dependencies]
python = "^3.7"
gazu = {git = "http://gitlab.lan/ltt/pipeline/pipeline-gazu.git"}
timecode = "^1.3.1"

[tool.poetry.scripts]
zorro = "zorro_core.app.cli.main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest = "^7.3.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
