[tool.poetry]
name = "zorro-core"
version = "0.1.0"
description = ""
authors = ["Lambin Simon <slambin@gmail.com>"]
readme = "README.md"
packages = [{include = "zorro_core"}]

[tool.poetry.scripts]
zorro = "zorro_core.main.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
timecode = "^1.3.1"
aiofiles = "^23.1.0"
typeguard = "^4.0.0"
tortoise-orm = "^0.19.3"
pydantic = "^2.0.3"
jinja2 = "^3.1.2"
grpcio-tools = "^1.57.0"
grpcio = "^1.57.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
